app/javascript/styles/mastodon/components.scss
/* ... */
.react-swipeable-view-container {
  &,
  .columns-area,
  .drawer,
  .column {
    height: 100%;
  }
}

.react-swipeable-view-container > * {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.column {
  width: 400px;
  position: relative;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;

  > .scrollable {
    border: 1px solid var(--background-border-color);
    border-top: 0;
    border-radius: 0 0 4px 4px;

    &.about,
    &.privacy-policy {
      border-top: 1px solid var(--background-border-color);
      border-radius: 4px;

      @media screen and (max-width: $no-gap-breakpoint) {
        border-top: 0;
        border-bottom: 0;
      }
    }
  }
}

.ui {
  flex: 0 0 auto;
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}

.drawer {
  width: 350px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  overflow-y: hidden;
}

.drawer__tab {
  display: flex;
  flex: 1 1 auto;
  padding: 13px 3px 11px;
  color: $darker-text-color;
  text-decoration: none;
  text-align: center;
  font-size: 16px;
  align-items: center;
  justify-content: center;
}

.column,
.drawer {
  flex: 1 1 100%;
  overflow: hidden;
}

@media screen and (width > $mobile-breakpoint) {
  .columns-area {
    padding: 0;
  }

  .column,
  .drawer {
    flex: 0 0 auto;
    padding: 10px;
    padding-inline-start: 5px;
    padding-inline-end: 5px;

    &:first-child {
      padding-inline-start: 10px;
    }

    &:last-child {
      padding-inline-end: 10px;
    }
  }

  .columns-area > div {
    .column,
    .drawer {
      padding-inline-start: 5px;
      padding-inline-end: 5px;
    }
  }
}

.columns-area--mobile {
  flex-direction: column;
  width: 100%;
  height: 100%;
  margin: 0 auto;

  .column,
  .drawer {
    width: 100%;
    height: 100%;
    padding: 0;
  }

  .account-card {
    margin-bottom: 0;
  }

  .filter-form {
    display: flex;
    flex-wrap: wrap;
  }

  .autosuggest-textarea__textarea {
    font-size: 16px;
  }

  .search__input {
    line-height: 18px;
    font-size: 16px;
    padding: 15px;
    padding-inline-end: 30px;
  }

  .scrollable {
    overflow: visible;

    @supports (display: grid) {
      contain: content;
    }
  }

  @media screen and (min-width: $no-gap-breakpoint) {
    padding: 10px 0;
    padding-top: 0;
  }
}

@media screen and (min-width: $no-gap-breakpoint) {
  .react-swipeable-view-container .columns-area--mobile {
    height: calc(100% - 10px) !important;
  }

  .getting-started__wrapper {
    margin-bottom: 10px;
  }

  .search-page .search {
    display: none;
  }

  .navigation-panel__legal {
    display: none;
  }
}

@media screen and (max-width: $no-gap-breakpoint - 1px) {
  $sidebar-width: 285px;

  .columns-area__panels__main {
    width: calc(100% - $sidebar-width);
  }

  .columns-area__panels {
    min-height: calc(100vh - $ui-header-height);
    gap: 0;
  }

  .columns-area__panels__pane--navigational {
    min-width: $sidebar-width;

    .columns-area__panels__pane__inner {
      width: $sidebar-width;
    }

    .navigation-panel {
      margin: 0;
      border-inline-start: 1px solid var(--background-border-color);
      height: 100vh;
    }

    .navigation-panel__sign-in-banner,
    .navigation-panel__logo,
    .navigation-panel__banner,
    .getting-started__trends {
      display: none;
    }

    .column-link__icon {
      font-size: 18px;
    }
  }

  .layout-single-column {
    .ui__header {
      display: flex;
      background: var(--background-color);
      border-bottom: 1px solid var(--background-border-color);
    }

    .column > .scrollable,
    .tabs-bar__wrapper .column-header,
    .tabs-bar__wrapper .column-back-button {
      border-left: 0;
      border-right: 0;
    }

    .column-header,
    .column-back-button,
    .scrollable,
    .error-column {
      border-radius: 0 !important;
    }

    .column-header,
    .column-back-button {
      border-top: 0;
    }
  }
}

@media screen and (max-width: $no-gap-breakpoint - 285px - 1px) {
  $sidebar-width: 55px;

  .columns-area__panels__main {
    width: calc(100% - $sidebar-width);
  }

  .columns-area__panels__pane--navigational {
    min-width: $sidebar-width;

    .columns-area__panels__pane__inner {
      width: $sidebar-width;
    }

    .column-link span {
      display: none;
    }

    .list-panel {
      display: none;
    }
  }
}

.explore__search-header {
  display: none;
}

.explore__suggestions__card {
  padding: 12px 16px;
  gap: 8px;
  display: flex;
  flex-direction: column;
  border-bottom: 1px solid var(--background-border-color);

  &:last-child {
    border-bottom: 0;
  }

  &__source {
    padding-inline-start: 60px;
    font-size: 13px;
    line-height: 16px;
    color: $dark-text-color;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }

  &__body {
    display: flex;
    gap: 12px;
    align-items: center;

    &__main {
      flex: 1 1 auto;
      display: flex;
      flex-direction: column;
      gap: 8px;
      min-width: 0;

      &__name-button {
        display: flex;
        align-items: center;
        gap: 8px;

        &__name {
          display: block;
          color: inherit;
          text-decoration: none;
          flex: 1 1 auto;
          min-width: 0;
        }

        .button {
          min-width: 80px;
        }

        .display-name {
          font-size: 15px;
          line-height: 20px;
          color: $secondary-text-color;

          strong {
            font-weight: 700;
          }

          &__account {
            color: $darker-text-color;
            display: block;
          }
        }
      }
    }
  }
}

@media screen and (max-width: $no-gap-breakpoint - 1px) {
  .columns-area__panels__pane--compositional {
    display: none;
  }

  .explore__search-header {
    display: flex;
  }
}
/* ... */

